# visualisation-recommendation-system

./: .gitignore  Questionnaire for Thesis Evaluation.docx  README.md  app.py  pyproject.toml
backend/: .env_example  .gitignore  database.py
backend/factories/: bar_chart_factory.py  line_chart_factory.py  pie_chart_factory.py  visualization_factory.py
backend/lookup_tables/: graph_type_lookup.py
backend/ontologies/: chart_ontology.py  ontology.py
backend/routes/: endpoints.py  fileUpload.py  login.py  register.py  visualise.py
backend/utils/: create_ontology.py  dataTypes.py  fileUpload.py  profiler.py  responseParser.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/components/: router.tsx
client/src/components/services/: app.service.ts
client/src/components/store/: userStore.ts
client/src/components/utils/: questions.ts
data/: data_contexts.csv  feedback.csv  rules.csv  rulesets.csv  userprofile.csv  users.csv
frontend/src/: App.tsx
frontend/src/components/: router.tsx
server/: app.py  database.py
server/context/: data_context.py  user_profile.py
server/factories/: bar_chart_factory.py  line_chart_factory.py  pie_chart_factory.py  visualization_factory.py
server/lookup_tables/: graph_type_lookup.py
server/ontologies/: chart_ontology.py  ontology.py
server/routes/: fileUpload.py  login.py  register.py  visualise.py
server/utils/: create_ontology.py  profiler.py  rule_format.py
test data/: Library_Loan_Records.csv  Product_Inventory.csv  employees.csv
uploads/: thesis_test.csv
(+24 files in other folders)
